--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Ocean (720P)-->
     <!-- https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment -->
     <div>
-      <h1>A simple Javascript Video Player</h1>
+      <h1>A Javascript Video Player from Scratch</h1>
       <div class="player">
           <video class="video" src='Mr_Kitty_After_Dark.mp4' playsinline></video>
           <div class="show-controls">
